@@ -8,6 +8,7 @@ rules-edit : new filters 'target is.any' 'target has xxxxx/vsysX'
 
 bugfixes:
 - fixed an issue where security profile filter 'is.set' and 'not.set' could return wrong value
+- rules-edit 'logEnd-Disable' was not available due to a typo in the name
 
 
 1.5.6
